distribution/oidc-auth/ingress-configuration/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
  - issuer: <<__oidc.issuer__>>
    jwksUri: <<__oidc.jwks_uri__>>
    # forwardOriginalToken: true
# ---
# apiVersion: security.istio.io/v1beta1
# kind: RequestAuthentication
# metadata:
#   name: centraldashboard
#   namespace: kubeflow
# spec:
#   selector:
#     matchLabels:
#       app: centraldashboard
#   jwtRules:
#   - issuer: <<__oidc.issuer__>>
#     jwksUri: <<__oidc.jwks_uri__>>
