distribution/oidc-auth/ingress-configuration/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - when:
    - key: request.auth.audiences
      values:
      - <<__oidc.client_id__>>



# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: istio-ingressgateway
#   namespace: istio-system
# spec:
#   selector:
#     matchLabels:
#       app: istio-ingressgateway
#   rules:
#   - from:
#     - source:
#         requestPrincipals: ["*"]

# # Allow all traffic to the istio-ingressgateway
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: istio-ingressgateway
#   namespace: istio-system
# spec:
#   action: ALLOW
#   selector:
#     # Same as the istio-ingressgateway Service selector
#     matchLabels:
#       app: istio-ingressgateway
#       istio: ingressgateway
#   rules:
#   - {}
